cryptoview-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cryptoview-app
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cryptoview-chart
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: cryptoview-chart-0.0.1
  name: cryptoview-svc
  namespace: cryptoview-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app.kubernetes.io/instance: cryptoview-app
    app.kubernetes.io/name: cryptoview-chart
